fix for menu x-overflow

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ body{
 .scroll-div{
     position: absolute;
     overflow-y: auto;
+    overflow-x: hidden;
     width: 100%;
     height: calc(100% - 50px);
     height: -webkit-calc(100% - 50px);
